# algorithms

./: .gitignore  CMakeLists.txt  README.md  run_bst.cpp
include/: bst.hpp
slides/: trees.tex
src/: bst.cpp
